# robotiq

robotiq_2f_85_gripper_visualization/urdf/: robotiq_arg2f_85_model_macro.xacro  robotiq_arg2f_transmission.xacro
robotiq_2f_c2_gripper_visualization/: CMakeLists.txt  package.xml  visualize.rviz
robotiq_2f_c2_gripper_visualization/config/: position_controllers.yaml
robotiq_2f_c2_gripper_visualization/launch/: test_robotiq_c2_model.launch
robotiq_2f_c2_gripper_visualization/urdf/: robotic_c2_transmission.xacro  robotiq_c2_model.xacro  robotiq_c2_model_macro.xacro
