<?xml version="1.0"?>
<package format="2">
  <name>robotiq_2f_c2_gripper_visualization</name>
  <version>0.0.0</version>
  <description>
    <p>
      Package containing visual components (urdfs, meshes, etc.) for use in simulating
      the 2F-85 or C2 model gripper developed by Robotiq. This package was adapted
      from https://github.com/jhu-lcsr-forks/robotiq.
    </p>
  </description>

  <maintainer email="ros@robotiq.com">Jean-Philippe Roberge</maintainer>
  <author>Kel Guerin </author>
  <url type="website">http://ros.org/wiki/robotiq</url>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>controller_manager</build_depend>
  <build_depend>effort_controllers</build_depend>
  <build_depend>gazebo_ros</build_depend>
  <build_depend>gazebo_ros_control</build_depend>
  <build_depend>joint_state_controller</build_depend>
  <build_depend>joint_trajectory_controller</build_depend>
  <build_depend>robot_state_publisher</build_depend>
  <build_depend>moveit_kinematics</build_depend>
  <build_depend>ros_controllers</build_depend>
  <build_depend>position_controllers</build_depend>
  <build_depend>gazebo</build_depend>

  <build_export_depend>controller_manager</build_export_depend>
  <build_export_depend>effort_controllers</build_export_depend>
  <build_export_depend>gazebo_ros</build_export_depend>
  <build_export_depend>gazebo_ros_control</build_export_depend>
  <build_export_depend>joint_state_controller</build_export_depend>
  <build_export_depend>joint_trajectory_controller</build_export_depend>
  <build_export_depend>robot_state_publisher</build_export_depend>
  <build_export_depend>moveit_kinematics</build_export_depend>
  <build_export_depend>ros_controllers</build_export_depend>
  <build_export_depend>position_controllers</build_export_depend>
  <build_export_depend>gazebo</build_export_depend>

  <exec_depend>xacro</exec_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>effort_controllers</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>gazebo_ros_control</exec_depend>
  <exec_depend>joint_state_controller</exec_depend>
  <exec_depend>joint_trajectory_controller</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>moveit_kinematics</exec_depend>
  <exec_depend>gazebo_ros_pkgs</exec_depend>
  <exec_depend>ros_controllers</exec_depend>
  <exec_depend>position_controllers</exec_depend>
  <exec_depend>gazebo</exec_depend>
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
